# cubic-spline-interpolation-cpp

./: CMakeLists.txt  LICENSE  README.md  main.cpp  plot.py
include/: cubicSpline.h
src/: Cholesky.cpp  cubicSpline.cpp  matrixOperations.cpp
